[project]
version = "2026.01.24"
license = "Apache-2.0"
name="ebooktts"

dependencies = [
  "EbookLib==0.20",
  "qwen_tts@git+https://github.com/QwenLM/Qwen3-TTS.git#egg=3b30a4e509657d8df1387554394141a0d68be4f0",
]

# pyproject.toml
[tool.pyright]
venvPath = "."
venv = ".venv"

# All if these are just noise becuase type annotations are lacking.
reportUnknownVariableType =  false
reportUnknownMemberType =  false
reportUnknownArgumentType =  false
reportMissingParameterType =  false
reportUnknownParameterType =  false
reportAny =  false
# Disabled because this is a blatent false positive if imported inline instead of top level?
reportMissingImports =  false
# add_argument returns something and makes all arg parsing have squiggly lines.
reportUnusedCallResult =  false
